# shipment-extras

./: .gitignore  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
analysis/: service_level_analyzer.py  shippo_extras_results_raw.json  shippo_extras_results_report.json  shippo_extras_results_report.md  split_report.py
analysis/carrier_reports/: canada_post_report.md  couriersplease_report.md  deutsche_post_report.md  dhl_express_report.md  fastway_australia_report.md  hermes_uk_report.md  lso_report.md  sendle_report.md  ups_report.md  usps_report.md
src/: comparative_runner.py  shippo_extras.py
swagger/: swagger.yaml
swagger/swagger_update_prompts/: canada_post_swagger_prompt.md  couriersplease_swagger_prompt.md  deutsche_post_swagger_prompt.md  dhl_express_swagger_prompt.md  fastway_australia_swagger_prompt.md  hermes_uk_swagger_prompt.md  lso_swagger_prompt.md  sendle_swagger_prompt.md  ups_swagger_prompt.md  usps_swagger_prompt.md
test/: test_async_behavior.py  test_live_integration.py
tests/: comparative_test.py  test_shippo_extras.py
